monitoring/promtail/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: promtail-network-policy
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: promtail
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: monitoring
    - from: []
      ports:
        - protocol: TCP
          port: 3101
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              name: monitoring
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 3100
    - to: []
      ports:
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 53
